Vulnerability fix for version 1.7.0 (#1336)
* Vulnerability fix for spring-boot and tomcat

* Vulnerability fix for json logback spring

* fixed vulnerabilities